enregistrement des nouveaux poids dans drive

--- a/Colab_train_nn.ipynb
+++ b/Colab_train_nn.ipynb
@@ -313,6 +313,119 @@
     "- Ajuster le notebook pour utiliser `torch.cuda.amp` (mixed precision) pour accélérer l'entraînement sur GPU modernes.\n",
     "- Ajouter une cellule pour visualiser les courbes de loss/metrics après l'entraînement.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a22578da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enregistrer les nouveaux poids directement dans le dépôt Git\n",
+    "# Cette cellule :\n",
+    "# 1) copie les checkpoints depuis Drive (si présents) dans le repo\n",
+    "# 2) réalise un `git add` + `git commit` avec un message horodaté\n",
+    "# 3) tente un `git push` vers le remote (affiche une aide en cas d'échec)\n",
+    "\n",
+    "import os, shutil, subprocess, shlex, datetime\n",
+    "\n",
+    "repo = globals().get('repo_path', '/content/smart-chess')\n",
+    "ckpt_dir = '/content/drive/MyDrive/smart-chess-checkpoints'\n",
+    "files = ['chess_model_checkpoint.pt', 'chess_nn_weights.npz']\n",
+    "\n",
+    "print('Repo détecté :', repo)\n",
+    "if not os.path.exists(repo):\n",
+    "    raise FileNotFoundError(f\"Repo introuvable : {repo}. Clonez le dépôt ou ajustez `repo_path`.\")\n",
+    "\n",
+    "# 1) Copier les fichiers depuis Drive (si présents)\n",
+    "copied = []\n",
+    "for f in files:\n",
+    "    src = os.path.join(ckpt_dir, f)\n",
+    "    if os.path.exists(src):\n",
+    "        dst = os.path.join(repo, f)\n",
+    "        shutil.copy2(src, dst)\n",
+    "        copied.append(os.path.relpath(dst, repo))\n",
+    "        print(f'Copié: {src} -> {dst}')\n",
+    "    else:\n",
+    "        # si le fichier existe déjà dans le repo, on l'ajoute quand même\n",
+    "        dst = os.path.join(repo, f)\n",
+    "        if os.path.exists(dst):\n",
+    "            copied.append(os.path.relpath(dst, repo))\n",
+    "            print(f'Fichier déjà dans le repo: {dst}')\n",
+    "        else:\n",
+    "            print(f\"Fichier manquant (ni dans Drive ni dans repo): {f}\")\n",
+    "\n",
+    "if not copied:\n",
+    "    print('Aucun fichier à committer. Arrêt.')\n",
+    "else:\n",
+    "    # 2) Commit\n",
+    "    cwd = os.getcwd()\n",
+    "    try:\n",
+    "        os.chdir(repo)\n",
+    "        def run(cmd):\n",
+    "            return subprocess.run(shlex.split(cmd), stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
+    "\n",
+    "        # Vérifier que c'est bien un repo git\n",
+    "        r = run('git rev-parse --is-inside-work-tree')\n",
+    "        if r.returncode != 0:\n",
+    "            print('Le dossier n\\'est pas un dépôt git. Initialisation locale (git init).')\n",
+    "            print('Si vous voulez pousser vers un remote, ajoutez-le ensuite avec `git remote add origin <url>`')\n",
+    "            run('git init')\n",
+    "\n",
+    "        # Vérifier / configurer user.name et user.email si manquants\n",
+    "        uname = run('git config user.name').stdout.strip()\n",
+    "        uemail = run('git config user.email').stdout.strip()\n",
+    "        if not uname:\n",
+    "            print('git user.name non configuré. Veuillez entrer un nom pour les commits.')\n",
+    "            uname = input('git user.name > ').strip()\n",
+    "            if uname:\n",
+    "                run(f'git config user.name \"{uname}\"')\n",
+    "        if not uemail:\n",
+    "            print('git user.email non configuré. Veuillez entrer un email pour les commits.')\n",
+    "            uemail = input('git user.email > ').strip()\n",
+    "            if uemail:\n",
+    "                run(f'git config user.email \"{uemail}\"')\n",
+    "\n",
+    "        # Ajouter et committer\n",
+    "        add_cmd = ['git', 'add'] + copied\n",
+    "        radd = subprocess.run(add_cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
+    "        if radd.returncode != 0:\n",
+    "            print('Erreur git add:', radd.stderr)\n",
+    "        else:\n",
+    "            timestamp = datetime.datetime.utcnow().isoformat(timespec='seconds')\n",
+    "            message = f'Add trained weights ({timestamp} UTC)'\n",
+    "            rcommit = run(f'git commit -m \"{message}\"')\n",
+    "            if rcommit.returncode != 0:\n",
+    "                # Si aucun changement à committer, git commit retournera code non nul\n",
+    "                if 'nothing to commit' in rcommit.stderr.lower() or 'nothing to commit' in rcommit.stdout.lower():\n",
+    "                    print('Rien de nouveau à committer (fichiers inchangés).')\n",
+    "                else:\n",
+    "                    print('Erreur git commit:', rcommit.stderr or rcommit.stdout)\n",
+    "            else:\n",
+    "                print('Commit effectué :', message)\n",
+    "\n",
+    "                # 3) Push (tentative)\n",
+    "                # On essaye d'envoyer vers origin/main ou origin/HEAD\n",
+    "                push_try = run('git rev-parse --abbrev-ref --symbolic-full-name @{u}')\n",
+    "                if push_try.returncode != 0:\n",
+    "                    print('\\nAucune branche upstream détectée. Tentative de push vers origin main...')\n",
+    "                    rpush = run('git push origin main')\n",
+    "                else:\n",
+    "                    rpush = run('git push')\n",
+    "\n",
+    "                if rpush.returncode != 0:\n",
+    "                    print('\\nPush échoué. Sortie du push:')\n",
+    "                    print(rpush.stderr)\n",
+    "                    print('\\nGuide rapide pour pousser depuis Colab:')\n",
+    "                    print(' - Méthode recommandée : créer un Personal Access Token (PAT) GitHub et utiliser:')\n",
+    "                    print(\"   !git remote set-url origin https://<USERNAME>:<TOKEN>@github.com/<USER>/<REPO>.git\")\n",
+    "                    print(' - Ou configurer une clé SSH dans Colab (plus complexe)')\n",
+    "                    print(' - Vous pouvez aussi télécharger les fichiers localement et les pousser depuis votre machine.')\n",
+    "                else:\n",
+    "                    print('Push effectué avec succès.')\n",
+    "    finally:\n",
+    "        os.chdir(cwd)\n"
+   ]
   }
  ],
  "metadata": {
