correction bug train_colab

--- a/ai/NN/train_colab_drive.ipynb
+++ b/ai/NN/train_colab_drive.ipynb
@@ -161,16 +161,16 @@
    "outputs": [],
    "source": [
     "# Importer les modules nécessaires depuis le projet\n",
+    "import importlib\n",
+    "\n",
     "try:\n",
-    "    from ai.NN.train_torch import (\n",
-    "        train_model,\n",
-    "        generate_training_data,\n",
-    "        ChessDataset,\n",
-    "        ChessNet\n",
-    "    )\n",
+    "    # Importer le module d'entraînement comme `trainer` pour réutilisation\n",
+    "    import ai.NN.train_torch as trainer\n",
+    "    # Importer l'évaluateur PyTorch si nécessaire\n",
+    "    import ai.NN.torch_nn_evaluator as torch_eval\n",
     "    from ai.Chess_v2 import Chess\n",
     "    print(\"✓ Modules importés avec succès!\")\n",
-    "except ImportError as e:\n",
+    "except Exception as e:\n",
     "    print(f\"❌ Erreur d'import: {e}\")\n",
     "    print(\"\\nVérifiez que vous êtes dans le bon répertoire et que tous les fichiers sont présents.\")\n",
     "    raise"
@@ -243,27 +243,32 @@
     "from tqdm import tqdm\n",
     "import time\n",
     "\n",
-    "print(f\"Génération de {CONFIG['num_games']} parties...\")\n",
-    "print(\"Cette opération peut prendre du temps, soyez patient!\\n\")\n",
+    "print(\"Chargement du dataset (depuis chessData)...\")\n",
+    "\n",
+    "# Préférer la variable DATASET_CSV (définie après le montage Drive) sinon utiliser la valeur par défaut du module trainer\n",
+    "dataset_path = globals().get('DATASET_CSV') or getattr(trainer, 'DATASET_PATH', None)\n",
+    "if dataset_path is None:\n",
+    "    raise FileNotFoundError('Aucun chemin de dataset défini. Montez Drive et placez le fichier CSV dans MyDrive/smart_chess_drive/chessData')\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "# Générer les données\n",
-    "X_train, y_train = generate_training_data(CONFIG['num_games'])\n",
+    "# Utiliser la fonction de chargement du script d'entraînement pour assurer le même prétraitement\n",
+    "fens, evaluations = trainer.load_data(dataset_path)\n",
+    "\n",
+    "# Variables attendues plus bas dans le notebook\n",
+    "X_train = fens\n",
+    "y_train = evaluations\n",
     "\n",
     "elapsed_time = time.time() - start_time\n",
     "\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"DONNÉES GÉNÉRÉES\")\n",
+    "print(\"DONNÉES CHARGÉES\")\n",
     "print(\"=\" * 60)\n",
-    "print(f\"Forme de X_train: {X_train.shape}\")\n",
-    "print(f\"Forme de y_train: {y_train.shape}\")\n",
     "print(f\"Nombre total de positions: {len(X_train):,}\")\n",
     "print(f\"Temps écoulé: {elapsed_time:.1f}s ({elapsed_time/60:.1f} min)\")\n",
-    "print(f\"Positions/seconde: {len(X_train)/elapsed_time:.1f}\")\n",
     "print(\"=\" * 60)\n",
     "\n",
-    "# Statistiques sur les données\n",
+    "# Statistiques sur les évaluations\n",
     "print(f\"\\nStatistiques sur les évaluations:\")\n",
     "print(f\"  Min: {y_train.min():.4f}\")\n",
     "print(f\"  Max: {y_train.max():.4f}\")\n",
