--- a/ai/NN/train_colab_drive.ipynb
+++ b/ai/NN/train_colab_drive.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8d5e0dc5",
    "metadata": {
     "colab": {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ce5e4f04",
    "metadata": {
     "colab": {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "fabb986a",
    "metadata": {
     "colab": {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7783beaf",
    "metadata": {
     "colab": {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "a76e678b",
    "metadata": {
     "colab": {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "c7397821",
    "metadata": {
     "colab": {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c9f87f8d",
    "metadata": {
     "colab": {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "76f74c05",
    "metadata": {
     "colab": {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "4504f1e6",
    "metadata": {
     "colab": {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "cc365442",
    "metadata": {
     "colab": {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "e0b3c66b",
    "metadata": {
     "colab": {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "d0c45e62",
    "metadata": {
     "colab": {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "056d2b3a",
    "metadata": {
     "colab": {
@@ -895,9 +895,9 @@
     },
     "collapsed": true,
     "executionInfo": {
-     "elapsed": 3,
+     "elapsed": 10,
      "status": "ok",
-     "timestamp": 1763308981880,
+     "timestamp": 1763309431870,
      "user": {
       "displayName": "Gautier de Marsac",
       "userId": "07528850342203083749"
@@ -905,7 +905,7 @@
      "user_tz": -60
     },
     "id": "056d2b3a",
-    "outputId": "5e71beef-54a8-472f-8d00-e2467b541c1d"
+    "outputId": "cf1e4053-09ed-407e-a46a-f6fa81ebc528"
    },
    "outputs": [
     {
@@ -979,10 +979,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "aba226c7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 216
+    },
+    "executionInfo": {
+     "elapsed": 4,
+     "status": "error",
+     "timestamp": 1763309431875,
+     "user": {
+      "displayName": "Gautier de Marsac",
+      "userId": "07528850342203083749"
+     },
+     "user_tz": -60
+    },
+    "id": "aba226c7",
+    "outputId": "fbe0aee5-9eb2-4bbc-d6f4-3a055c8ae759"
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_val' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-2616201867.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Créer le dataset de validation (INTÉGRAL - pas d'échantillonnage)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mval_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChessDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Créer le dataloader de validation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_val' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from ai.NN.torch_train import ChessDataset\n",
@@ -1012,7 +1041,9 @@
   {
    "cell_type": "markdown",
    "id": "ca31d239",
-   "metadata": {},
+   "metadata": {
+    "id": "ca31d239"
+   },
    "source": [
     "## 10.5. Création du dataset de validation"
    ]
@@ -2578,7 +2609,7 @@
     "    model.train()\n",
     "    train_loss = 0.0\n",
     "    num_batches = 0\n",
-    "    \n",
+    "\n",
     "    # Recréer le dataset et dataloader pour chaque époque (avec shuffle)\n",
     "    train_dataset = ChessDataset(X_train, y_train)\n",
     "    train_loader = DataLoader(\n",
@@ -2588,7 +2619,7 @@
     "        num_workers=0,\n",
     "        pin_memory=True if CONFIG['device'] == 'cuda' else False\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    progress_bar = tqdm(train_loader, desc=f\"Epoch {epoch + 1}/{CONFIG['epochs']} [TRAIN]\")\n",
     "    for batch_idx, (inputs, targets) in enumerate(progress_bar):\n",
     "        # Vérification NaN/Inf\n",
@@ -2596,67 +2627,67 @@
     "            continue\n",
     "        if torch.isnan(targets).any() or torch.isinf(targets).any():\n",
     "            continue\n",
-    "        \n",
+    "\n",
     "        inputs = inputs.to(CONFIG['device'])\n",
     "        targets = targets.to(CONFIG['device'])\n",
-    "        \n",
+    "\n",
     "        # Forward\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(inputs)\n",
     "        loss = criterion(outputs, targets)\n",
-    "        \n",
+    "\n",
     "        # Backward\n",
     "        loss.backward()\n",
     "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=5.0)\n",
     "        optimizer.step()\n",
-    "        \n",
+    "\n",
     "        train_loss += loss.item()\n",
     "        num_batches += 1\n",
-    "        \n",
+    "\n",
     "        # Update progress bar\n",
     "        avg_loss = train_loss / num_batches\n",
     "        progress_bar.set_postfix({\"loss\": f\"{np.sqrt(avg_loss):.4f}\"})\n",
-    "    \n",
+    "\n",
     "    avg_train_loss = train_loss / num_batches\n",
     "    train_losses.append(avg_train_loss)\n",
-    "    \n",
+    "\n",
     "    # ========== PHASE DE VALIDATION (100% DU DATASET) ==========\n",
     "    model.eval()\n",
     "    val_predictions = []\n",
     "    val_targets = []\n",
     "    val_loss = 0.0\n",
     "    val_batches = 0\n",
-    "    \n",
+    "\n",
     "    print(f\"\\n🔍 Évaluation sur l'INTÉGRALITÉ du dataset de validation ({len(X_val):,} positions)...\")\n",
-    "    \n",
+    "\n",
     "    with torch.no_grad():\n",
     "        for inputs, targets in tqdm(val_loader, desc=f\"Epoch {epoch + 1}/{CONFIG['epochs']} [VAL]  \"):\n",
     "            inputs = inputs.to(CONFIG['device'])\n",
     "            targets = targets.to(CONFIG['device'])\n",
-    "            \n",
+    "\n",
     "            outputs = model(inputs)\n",
     "            loss = criterion(outputs, targets)\n",
-    "            \n",
+    "\n",
     "            val_loss += loss.item()\n",
     "            val_batches += 1\n",
-    "            \n",
+    "\n",
     "            val_predictions.extend(outputs.cpu().numpy().flatten())\n",
     "            val_targets.extend(targets.cpu().numpy().flatten())\n",
-    "    \n",
+    "\n",
     "    avg_val_loss = val_loss / val_batches\n",
     "    val_losses.append(avg_val_loss)\n",
-    "    \n",
+    "\n",
     "    # Calcul des métriques de validation\n",
     "    val_predictions = np.array(val_predictions)\n",
     "    val_targets = np.array(val_targets)\n",
-    "    \n",
+    "\n",
     "    val_rmse = float(np.sqrt(np.mean((val_predictions - val_targets) ** 2)))\n",
     "    val_mae = float(np.mean(np.abs(val_predictions - val_targets)))\n",
     "    val_corr = float(np.corrcoef(val_predictions, val_targets)[0, 1]) if len(val_predictions) > 1 else 0.0\n",
-    "    \n",
+    "\n",
     "    baseline_rmse = val_targets.std()\n",
     "    improvement = 100 * (1 - val_rmse / baseline_rmse) if baseline_rmse > 0 else 0\n",
-    "    \n",
+    "\n",
     "    # Affichage des résultats\n",
     "    print(f\"\\n{'='*70}\")\n",
     "    print(f\"EPOCH {epoch+1}/{CONFIG['epochs']}\")\n",
@@ -2669,7 +2700,7 @@
     "    print(f\"  Corrélation:  {val_corr:.4f}\")\n",
     "    print(f\"  Mean preds:   {val_predictions.mean():.4f}  (cible: {val_targets.mean():.4f})\")\n",
     "    print(f\"  Std preds:    {val_predictions.std():.4f}  (cible: {val_targets.std():.4f})\")\n",
-    "    \n",
+    "\n",
     "    # Indicateur de qualité\n",
     "    if improvement > 50:\n",
     "        print(f\"  ✅✅ Performance excellente!\")\n",
@@ -2679,25 +2710,25 @@
     "        print(f\"  →  Apprentissage en cours\")\n",
     "    else:\n",
     "        print(f\"  ⚠️  Faible amélioration - vérifier hyperparamètres\")\n",
-    "    \n",
+    "\n",
     "    # LR Scheduler\n",
     "    current_lr = optimizer.param_groups[0]['lr']\n",
     "    print(f\"  Learning rate: {current_lr:.6f}\")\n",
     "    scheduler.step(val_rmse)\n",
     "    print(f\"{'='*70}\\n\")\n",
-    "    \n",
+    "\n",
     "    # Sauvegarder le meilleur modèle\n",
     "    if val_rmse < best_val_rmse:\n",
     "        best_val_rmse = val_rmse\n",
     "        print(f\"💾 Nouveau meilleur RMSE validation: {best_val_rmse:.4f} - Sauvegarde...\")\n",
-    "        \n",
+    "\n",
     "        # Sauvegarder dans le dossier checkpoints sur Drive\n",
     "        checkpoint_path = os.path.join(CKPT_DIR, 'chess_model_checkpoint.pt')\n",
     "        weights_path = os.path.join(CKPT_DIR, 'chess_nn_weights.npz')\n",
-    "        \n",
+    "\n",
     "        from ai.NN.torch_nn_evaluator import torch_save_checkpoint, save_weights_npz\n",
     "        torch_save_checkpoint(checkpoint_path, model, optimizer, epoch, best_rmse=best_val_rmse)\n",
-    "        \n",
+    "\n",
     "        meta = {'learning_rate': current_lr, 'best_rmse': float(best_val_rmse)}\n",
     "        save_weights_npz(model, weights_path, adam_moments=meta)\n",
     "        print(f\"✅ Modèle sauvegardé!\")\n",
